fix: hero section css flex wrap

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -2,7 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: -10px 125px;
+    flex-wrap: wrap;
+    margin-top: 30px;
 }
 
 .hero_first {
@@ -10,35 +11,36 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 50px;
+    width: 30%;
+    min-width: 300px;
     border-radius: 36px;
     border: 1px solid #DFE7F9;
     background: #FFF;
     box-shadow: 0px 0px 19px 1px rgba(84, 84, 84, 0.10);
-    flex-basis: 40%;
 }
 
-
-
-.counter_main{
+.counter_main {
     margin-top: 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    min-width: 160px;
 }
 
-.hero_first h1{
+.hero_first h1 {
     font-size: 40px;
     color: #393939;
     margin-bottom: 20px;
 }
 
-.hero_first p{
+.hero_first p {
     color: #4D4D4D;
 }
 
-.hero_first h2{
+.hero_first h2 {
     color: #486BBC;
 }
+
 .counter {
     position: relative;
     color: #000;
@@ -57,6 +59,6 @@
     color: #000;
 }
 
-.hero_main button span:hover{
+.hero_main button span:hover {
     color: #DFE7F9;
 }
